--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,15 +1,60 @@
-Gizlilik Politikası
-Bu gizlilik politikası [Secrets of Crime] (bundan sonra “Uygulama”) tarafından toplanan kişisel ve cihaz verilerini, kullanım amaçlarını ve üçüncü taraf hizmetleri açıklar.
-Toplanan veriler:
-Teknik veriler: Cihaz modeli, işletim sistemi sürümü, uygulama hata raporları.
-Kullanım verileri: Oyun içi istatistikler (level ilerleme, oturum süresi) — anonimleştirilmiş.
-Reklam/izleme tanımlayıcıları: Reklam SDK’ları nedeniyle cihaz tanımlayıcıları (ör. Advertising ID) toplanabilir.
-Kullanım amacı: Bu veriler uygulamanın çalışması, performans iyileştirmesi, hata ayıklama ve reklam hedefleme için kullanılır.
-Üçüncü taraflar: Uygulama aşağıdaki üçüncü taraf hizmetleriyle entegredir (örnek):
-Game Analytics — analiz.
-GooglePlay Ads — reklam gösterimi.
-Bu üçüncü tarafların kendi gizlilik politikaları ve veri işleme uygulamaları vardır; lütfen onların politikalarını da inceleyin.
-Çocuklar: Uygulama 13 yaşın altındaki çocuklara yönelik değildir. Eğer ebeveyn izni olmadan kişisel veri toplandığı tespit edilirse, veri silinecektir.
-Veri saklama ve güvenlik: Veriler sadece gerekli süre boyunca saklanır. Makul güvenlik önlemleri uygulanmaktadır, fakat tam güvenliği garanti edemeyiz.
-İletişim: Gizlilikle ilgili talepler için: [darkboxinteractive@gmail.com]
-Güncellemeler: Son güncelleme: [15.10.2025].
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Privacy Policy — Secrets of Crime</title>
+  <style>
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;line-height:1.6;color:#111;background:#f7f7f7;padding:24px}
+    .container{max-width:820px;margin:32px auto;background:#fff;padding:28px;border-radius:10px;box-shadow:0 6px 24px rgba(17,17,17,0.08)}
+    h1{font-size:1.6rem;margin-bottom:8px}
+    h2{font-size:1.05rem;margin-top:20px}
+    p,ul{font-size:0.98rem}
+    ul{margin-left:20px}
+    footer{margin-top:26px;font-size:0.9rem;color:#555}
+    a{color:inherit}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Privacy Policy</h1>
+    <p>Last updated: <strong>October 15, 2025</strong></p>
+
+    <p>This privacy policy describes how <strong>Secrets of Crime</strong> (hereinafter referred to as "the Application") collects, uses, and shares personal and device data, as well as the use of third-party services.</p>
+
+    <h2>Collected Data</h2>
+    <ul>
+      <li><strong>Technical Data:</strong> Device model, operating system version, and application crash reports.</li>
+      <li><strong>Usage Data:</strong> In-game statistics (such as level progression and session duration) — anonymized.</li>
+      <li><strong>Advertising/Tracking Identifiers:</strong> Device identifiers (e.g., Advertising ID) may be collected due to advertising SDKs.</li>
+    </ul>
+
+    <h2>Purpose of Use</h2>
+    <p>This data is used to ensure the proper operation of the application, improve performance, debug issues, and deliver targeted advertisements.</p>
+
+    <h2>Third Parties</h2>
+    <p>The application integrates the following third-party services:</p>
+    <ul>
+      <li><strong>Game Analytics</strong> — for analytics.</li>
+      <li><strong>Google Play Ads</strong> — for advertising display.</li>
+    </ul>
+    <p>These third parties have their own privacy policies and data processing practices. Please review their policies for more details.</p>
+
+    <h2>Children</h2>
+    <p>The application is not intended for children under the age of 13. If personal data from a child is collected without parental consent, it will be deleted immediately.</p>
+
+    <h2>Data Retention and Security</h2>
+    <p>Data is retained only as long as necessary. Reasonable security measures are implemented; however, absolute security cannot be guaranteed.</p>
+
+    <h2>Contact</h2>
+    <p>For privacy-related inquiries, please contact: <a href="mailto:darkboxinteractive@gmail.com">darkboxinteractive@gmail.com</a></p>
+
+    <h2>Updates</h2>
+    <p>This policy may be updated periodically. When we update this policy we will revise the "Last updated" date at the top of this page.</p>
+
+    <footer>
+      <p>If you need a Turkish version, a more detailed policy for additional SDKs (Facebook, Unity Ads, Adjust, etc.), or a ready-to-deploy GitHub Pages README with this file, tell me and I will prepare it.</p>
+    </footer>
+  </div>
+</body>
+</html>
