--- a/index.html
+++ b/index.html
@@ -2,55 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Privacy Policy — Secrets of Crime</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Privacy Policy — DarkBoxInteractive</title>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;line-height:1.6;color:#111;background:#f7f7f7;padding:24px}
-    .container{max-width:820px;margin:32px auto;background:#fff;padding:28px;border-radius:10px;box-shadow:0 6px 24px rgba(17,17,17,0.08)}
-    h1{font-size:1.6rem;margin-bottom:8px}
-    h2{font-size:1.05rem;margin-top:20px}
-    p,ul{font-size:0.98rem}
-    ul{margin-left:20px}
-    footer{margin-top:26px;font-size:0.9rem;color:#555}
-    a{color:inherit}
+    body { font-family: Arial, sans-serif; line-height: 1.6; color: #222; background: #f5f5f5; padding: 20px; }
+    .container { max-width: 800px; margin: auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+    h1, h2 { color: #333; }
+    h2 { margin-top: 24px; }
+    p, ul { margin-bottom: 16px; }
+    ul { margin-left: 20px; }
+    footer { margin-top: 24px; font-size: 0.9em; color: #666; }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Privacy Policy</h1>
-    <p>Last updated: <strong>October 15, 2025</strong></p>
+    <p>Last revised: <strong>October 15, 2025</strong></p>
 
-    <p>This privacy policy describes how <strong>Secrets of Crime</strong> (hereinafter referred to as "the Application") collects, uses, and shares personal and device data, as well as the use of third-party services.</p>
+    <p><strong>DarkBoxInteractive</strong> ("we", "our", or "us") respects your privacy and is committed to protecting your personal data. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our service (e.g. the mobile game “Secrets of Crime”) (the “Service”). By using the Service, you agree to the collection and use of information in accordance with this policy.</p>
 
-    <h2>Collected Data</h2>
+    <h2>1. Information We Collect</h2>
     <ul>
-      <li><strong>Technical Data:</strong> Device model, operating system version, and application crash reports.</li>
-      <li><strong>Usage Data:</strong> In-game statistics (such as level progression and session duration) — anonymized.</li>
-      <li><strong>Advertising/Tracking Identifiers:</strong> Device identifiers (e.g., Advertising ID) may be collected due to advertising SDKs.</li>
+      <li><strong>Personal Data:</strong> We may collect your email address when you contact us for support.</li>
+      <li><strong>Device & Technical Data:</strong> Device model, OS version, unique device identifier, IP address, system logs, crash reports.</li>
+      <li><strong>Usage Data:</strong> Information about how you interact with the game (levels, session duration, achievements) — anonymized or pseudonymized.</li>
+      <li><strong>Advertising / Tracking Identifiers:</strong> Advertising ID, IDFA, or similar identifiers used by advertising/analytics SDKs.</li>
+      <li><strong>Cookies & Similar Technologies:</strong> For website access (if applicable) — e.g. cookie data, web beacons, log files.</li>
     </ul>
 
-    <h2>Purpose of Use</h2>
-    <p>This data is used to ensure the proper operation of the application, improve performance, debug issues, and deliver targeted advertisements.</p>
-
-    <h2>Third Parties</h2>
-    <p>The application integrates the following third-party services:</p>
+    <h2>2. How We Use Your Information</h2>
+    <p>We may use the collected data to:</p>
     <ul>
-      <li><strong>Game Analytics</strong> — for analytics.</li>
-      <li><strong>Google Play Ads</strong> — for advertising display.</li>
+      <li>Provide, operate, and maintain the Service</li>
+      <li>Improve, personalize, and expand the Service</li>
+      <li>Debug and monitor usage and performance</li>
+      <li>Detect, prevent and address technical issues or fraud</li>
+      <li>Serve advertisements and analyze ad performance</li>
+      <li>Communicate with you (e.g. updates, support, notifications)</li>
+      <li>Enforce our Terms & Conditions and legal obligations</li>
     </ul>
-    <p>These third parties have their own privacy policies and data processing practices. Please review their policies for more details.</p>
 
-    <h2>Children</h2>
-    <p>The application is not intended for children under the age of 13. If personal data from a child is collected without parental consent, it will be deleted immediately.</p>
+    <h2>3. Third-Party Services</h2>
+    <p>We may share information with third-party service providers including, but not limited to:</p>
+    <ul>
+      <li>Analytics providers (e.g. GameAnalytics, Google Analytics)</li>
+      <li>Advertising networks / SDKs (e.g. AdMob, Unity Ads)</li>
+      <li>Hosting providers, email services, customer support tools</li>
+    </ul>
+    <p>These third parties have their own privacy policies and may collect, process, and store your data. Please review their privacy practices.</p>
 
-    <h2>Data Retention and Security</h2>
-    <p>Data is retained only as long as necessary. Reasonable security measures are implemented; however, absolute security cannot be guaranteed.</p>
+    <h2>4. Disclosure of Your Information</h2>
+    <p>We may share your information in following cases:</p>
+    <ul>
+      <li>With your consent</li>
+      <li>To comply with legal obligations or court orders</li>
+      <li>To protect and defend our rights or property</li>
+      <li>With service providers working on our behalf</li>
+      <li>In connection with business transfers (merger, acquisition, sale)</li>
+    </ul>
 
-    <h2>Contact</h2>
-    <p>For privacy-related inquiries, please contact: <a href="mailto:darkboxinteractive@gmail.com">darkboxinteractive@gmail.com</a></p>
+    <h2>5. Data Security & Retention</h2>
+    <p>We implement reasonable technical and administrative measures to secure your data. However, no system is completely secure. We will retain your data only as long as necessary for the purposes for which it was collected, or as required by law.</p>
 
-    <h2>Updates</h2>
-    <p>This policy may be updated periodically. When we update this policy we will revise the "Last updated" date at the top of this page.</p>
+    <h2>6. Children</h2>
+    <p>We do not knowingly collect personal information from children under the age of 13. If we learn we have collected such information, we will delete it promptly.</p>
+
+    <h2>7. Your Rights</h2>
+    <p>You have the right to:</p>
+    <ul>
+      <li>Access, correct, delete your personal data</li>
+      <li>Withdraw consent (where processing is based on consent)</li>
+      <li>Opt-out of certain services (e.g. marketing)</li>
+      <li>Lodge a complaint with a data protection authority</li>
+    </ul>
+
+    <h2>8. Changes to This Policy</h2>
+    <p>We may update this policy from time to time. Any changes will be posted here with an updated “Last Revised” date.</p>
+
+    <h2>9. Contact Us</h2>
+    <p>For any privacy-related questions or requests, contact us at: <a href="mailto:darkboxinteractive@gmail.com">darkboxinteractive@gmail.com</a></p>
+
+    <footer>
+      <p>This policy is effective as of the date first set forth above.</p>
+    </footer>
   </div>
 </body>
 </html>
